--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "ircmaxell/password-compat": "^1.0",
         "gedmo/doctrine-extensions": "dev-master",
-        "knplabs/knp-paginator-bundle": "dev-master"
+        "knplabs/knp-paginator-bundle": "^2.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
