--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -103,11 +103,13 @@ fos_user:
     firewall_name: main
     user_class: Biblioteca\UserBundle\Entity\usuario
     registration:
+        confirmation:
+            enabled: true
         form:
             type: biblioteca_user_registration
     from_email:
-        address:        the_big_persia@hotmail.com
-        sender_name:    Demo App
+        address:        "%mailer_user%"
+        sender_name:    Biblioteca Teg Facyt
 
 # Configuracion de Paginador
 knp_paginator:
