--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -44,5 +44,6 @@ monolog:
 assetic:
     use_controller: true
 
-#swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+    delivery_address: "%mailer_user%"
+    
