--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -9,7 +9,8 @@ framework:
 
 web_profiler:
     toolbar: true
-    intercept_redirects: true
+    intercept_redirects: false
+
 monolog:
     handlers:
         main:
