--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -23,5 +23,6 @@ monolog:
             type:  stream
             path:  "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
+            path: 'php://stderr'
         console:
             type:  console
