--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -108,7 +108,8 @@ fos_user:
         form:
             type: biblioteca_user_registration
     from_email:
-        address:        1211agarcia@gmail.com#"%mailer_user%"
+        address:        1211agarcia@gmail.com
+        #address:       "%mailer_user%"
         sender_name:    Biblioteca Teg Facyt
 
 # Configuracion de Paginador
